--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -23,6 +23,9 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    {% block custom_header_links %}
+    {% endblock %}
+
 </head>
 
 <body>
@@ -100,6 +103,24 @@
         </div>
     </nav>
     {% block header %}
+    <div class="pma-hero">
+        <div class="container ">
+            <div class="row">
+                <div class="col-md-7">
+                    <h2 class="text-center"> <strong>Participemos</strong> en la consulta del <br> Presupuesto Municipal</h2>
+                    <h4 class="text-center"> Informémonos dónde y cuándo será</h4>
+                    <div>
+                        {% block illustration %}
+                        <img src="/static/images/illustration-index.png" alt="..." class="pma-illustration">
+                        {% endblock %}
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div id="nic-map-container"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     {% endblock %}
     </header>
     {% block main_content %}
@@ -165,6 +186,8 @@
         ga('create', 'UA-68619423-1', 'auto');
         ga('send', 'pageview');
     </script>
+    {% block custom_footer_scripts %}
+    {% endblock %}
 </body>
 
 </html>
