--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -107,16 +107,22 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-7">
+                    {% block header_left %}
+                    {% block header_left_title %}
                     <h2 class="text-center"> <strong>Participemos</strong> en la consulta del <br> Presupuesto Municipal</h2>
                     <h4 class="text-center"> Informémonos dónde y cuándo será</h4>
+                    {% endblock %}
                     <div>
                         {% block illustration %}
                         <img src="/static/images/illustration-index.png" alt="..." class="pma-illustration">
                         {% endblock %}
                     </div>
+                    {% endblock %}
                 </div>
                 <div class="col-md-5">
+                    {% block header_right %}
                     <div id="nic-map-container"></div>
+                    {% endblock %}
                 </div>
             </div>
         </div>
@@ -134,7 +140,7 @@
                         <span id="brand-02">Municipales </span>
                         <span id="brand-03">Abiertos </span>
                     </a>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
+                    <p> Las opiniones expresadas en este sitio web no reflejan necesariamente las de la Agencia de los Estados Unidos para el Desarrollo Internacional, USAID, o la del Gobierno de los Estados Unidos. </p>
                     <a href="#" class="pma-special-link font_small">POLÍTICAS DE PRIVACIDAD</a>
                 </div>
                 <div class="col-md-6">
@@ -162,6 +168,7 @@
 
     </footer>
 
+    {% block footer_scripts_global %}
     <!-- Librería jQuery requerida por los plugins de JavaScript -->
     <script src="http://code.jquery.com/jquery.js"></script>
 
@@ -170,13 +177,7 @@
          plugins que utilices) -->
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="{% static 'js/tooltip.js' %}"></script>
-    <!-- Highcharts -->
-    <script src="https://code.highcharts.com/maps/highmaps.js"></script>
-    <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/maps/modules/drilldown.js"></script>
-    <script src="https://code.highcharts.com/mapdata/countries/ni/ni-all.js"></script>
-    <script type="text/javascript" src="{% static 'maps/ni-custom-all.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/map-ni-drilldown.js' %}"></script>
+
     <!-- Google Analytics -->
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -186,7 +187,16 @@
         ga('create', 'UA-68619423-1', 'auto');
         ga('send', 'pageview');
     </script>
+    {% endblock %}
+
     {% block custom_footer_scripts %}
+    <!-- Highcharts -->
+    <script src="https://code.highcharts.com/maps/highmaps.js"></script>
+    <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/maps/modules/drilldown.js"></script>
+    <script src="https://code.highcharts.com/mapdata/countries/ni/ni-all.js"></script>
+    <script type="text/javascript" src="{% static 'maps/ni-custom-all.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/map-ni-drilldown.js' %}"></script>
     {% endblock %}
 </body>
 
