Fix variable name for total per expense origin

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -93,7 +93,7 @@
                 {% endif %}
                     <div class="col-md-6">
                         <div class="info-box">
-                            <span class="info-box-icon pma-icon {{origen.subsubtipogasto__origen__slug}}">
+                            <span class="info-box-icon pma-icon {{ gasto.subsubtipogasto__origen__slug}}">
                             </span>
                             <div class="info-box-content">
                                 <span class="info-box-text">{{ gasto.subsubtipogasto__origen__nombre }}</span>
