--- a/core/templates/_page.html
+++ b/core/templates/_page.html
@@ -1,6 +1,7 @@
 {% extends "_base.html" %}
 {% load core_extras %}
 
+{% load staticfiles %}
 {% block custom_header_links %}
 <link rel="stylesheet" href="{% static 'css/pe-icon-7-stroke.css' %}">
 {% endblock %}
