--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -103,3 +103,35 @@
                             </div>
                         </div>
 {% endblock %}
+{% block section2 %}
+<div class="row">
+    <div class="col-md-6 table-responsive">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr class="">
+                    <th>Rubros de ingresos</th>
+                    <th class="text-right">Inicial</th>
+                    <th class="text-right">Ejecutado</th>
+                    <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a></th>
+                </tr>
+            </thead>
+            {% for row in rubros %}
+            <tr>
+                <td>{{ row.subsubtipoingreso__origen__nombre}}</td>
+                <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                <td class="text-right">{{ row.ejecutado|million|intcomma|default:"0" }}</td>
+                <td class="">{% if asignado %}{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1|default:"0" }}%{% endif %}</td>
+            </tr>
+            {% endfor %}
+            <tfoot>
+                <tr class="">
+                    <td>TOTAL</td>
+                    <td class="text-right">{{ asignado|million|intcomma }}</td>
+                    <td class="text-right">{{ejecutado|million|intcomma|default:"0" }}</td>
+                    <td class="">{% if asignado %}{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%{% endif %}</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+</div>
+{% endblock %}
