--- a/core/static/css/bubbletree.css
+++ b/core/static/css/bubbletree.css
@@ -1,12 +1,11 @@
 .bubbletree-container {
-    height: 600px;
+    height: 400px;
     position: relative;
 }
 .bubbletree-wrapper {
     width: 100%;
     height: 100%;
     position: absolute;
-    cofog-
 }
 .bubbletree {
     position: relative;
@@ -20,7 +19,7 @@
     cursor: default;
 }
 .bubbletree .bubbletree-amount {
-    font-family: Graublau, Georgia, sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 16px;
 }
 .bubbletree .bubbletree-desc {
@@ -32,8 +31,8 @@
     color: #000;
     text-align: center;
     cursor: default;
+    font-family: 'Raleway', sans-serif;
     font-size: 11px;
-    font-family: sans-serif;
     margin-top: 5px;
 }
 .bubbletree .bubbletree-label2 span {
