--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -225,6 +225,16 @@ footer .copyright {
     font-weight: bold;
     font-size: 12px;
 }
+/* margins */
+.wide{
+
+}
+.medium{
+
+}
+.narrow{
+    
+}
 
 /* color schema styles */
 .pma-fg-green {
