--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -227,13 +227,16 @@ footer .copyright {
 }
 /* margins */
 .wide{
-
+    margin-bottom: 1.414em;
+    margin-top: 1.414em;
 }
 .medium{
-
+    margin-bottom: 1.3em;
+    margin-top: 1.3em;
 }
 .narrow{
-    
+    margin-bottom: 0.833em;
+    margin-top: 0.833em;
 }
 
 /* color schema styles */
@@ -248,4 +251,22 @@ footer .copyright {
 }
 .pma-bg-gray{
     background-color: #f8f9fa;
+}
+
+/* Chart Update options after render - Icons Styles */
+.chart-update{
+}
+.chart-update .pma-icon {
+    font-size: 36px;
+    margin-right: 15px;
+}
+.pma-index-icons .pma-icon{
+    font-size: 45px;
+}
+
+.pma-header-summary .pma-icon{
+    font-size: 36px;
+}
+.acerca {
+    margin-top: 50px;
 }
