--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -23,11 +23,9 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
+        <div class="row pma-header-summary wide">
                 {% block header_summary %}
                 {% endblock %}
-            </div>
         </div>
     </div>
 </div>
