--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -78,6 +78,11 @@
                         });
             });
     </script>
+    {% if municipio and charts.4 %}
+    {{ charts|load_charts:"ejecutado, comparativo_anios, comparativo2, comparativo3, tipo, asignado_barra, barra" }}
+    {% else %}
+    {{ charts|load_charts:"ejecutado,comparativo2,tipo,comparativo3,comparativo_anios" }}
+    {% endif %}
 {% endblock %}
 
     {% block header_title %}
@@ -138,22 +143,16 @@
                     <div class="bubbletree"></div>
                 </div>
             </div>
-            <div class="btn-group">
-                <button type="button" class="btn btn-default btn-lg" aria-label="Left Align">
-                    <span class=" pe-7s-graph" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default" aria-label="Center Align">
-                    <span class=" pe-7s-graph3" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default" aria-label="Right Align">
-                    <span class=" pe-7s-graph2" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default" aria-label="Justify">
-                    <span class=" pe-7s-graph1" aria-hidden="true"></span>
-                </button>
+            <div class="chart-update">
+                    <span class="pma-icon pe-7s-graph pma-fg-blue" aria-hidden="true"></span>
+                    <span class="pma-icon pe-7s-graph3 pma-fg-blue" aria-hidden="true"></span>
+                    <span class="pma-icon pe-7s-graph2 pma-fg-blue" aria-hidden="true"></span>
+                    <span class="pma-icon pe-7s-graph1 pma-fg-blue" aria-hidden="true"></span>
             </div>
         </div>
         <div class="col-md-6 table-responsive">
+                <h2> <strong>Ingresos del período</strong> <br/></h2>
+                <hr class="pma-line-1">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr class="">
@@ -181,8 +180,39 @@
     </div>
 </div>
 {% endblock %}
-{% block section2 %}
-<div class="row">
 
+{% block section2 %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+        </div>
+        <div class="col-md-6 table-responsive">
+            {% if not municipio %}
+            <h2><strong>Recaudación por habitante</strong><br/>Córdobas Corrientes</h2>
+            <hr class="pma-line-1">
+            <h3>  según categoría de municipios</h3>
+            <table class="table table-condensed">
+                <tr class="">
+                    <th>Categoría de municipio</th>
+                    <th>Presupuestado</th>
+                    {% if year != '2016' %}<th>Ejecutado</th>{% endif %}</tr>
+                {% for row in porclasep %}
+                <tr>
+                    <td class="text-center">{{ row.clasificacion }}</td>
+                    <td class="text-right">{% if row.asignado %}{{ row.asignado|floatformat:2|intcomma }}{% else %} 0 {% endif %}</td>
+                    {% if year != '2016' %}
+                    <td class="text-right">{% if row.ejecutado %}{{ row.ejecutado|floatformat:2|intcomma }} {% else %} 0 {% endif %}</td>
+                    {% endif %}
+                </tr>
+                {% endfor %}
+                <tr class="">
+                    <td><strong>Media NacionaL</strong></td>
+                    <td class="text-right"><strong>{{ porclasep|total_sum:'asignado'|floatformat:2|intcomma }}</strong></td>
+                    <td class="text-right"><strong>{{ porclasep|total_sum:'ejecutado'|floatformat:2|intcomma }}</strong></td>
+                </tr>
+            </table>
+            {% endif%}
+        </div>
+    </div>
 </div>
 {% endblock %}
